--- a/Session12/App.xaml
+++ b/Session12/App.xaml
@@ -5,225 +5,14 @@
              StartupUri="MainWindow.xaml">
              <!--StartupUri="LogAndRegWindow/LoginPage.xaml">-->
     <Application.Resources>
-        
-        <!--#region Общий стиль для основых StackPanel -->
-        <Style x:Key="StyleStackPanel"
-               TargetType="StackPanel">
-            <Setter
-                Property="HorizontalAlignment"
-                Value="Center"/>
-            <Setter
-                Property="VerticalAlignment"
-                Value="Center"/>
-            <Setter
-                Property="TextBlock.Foreground"
-                Value="#FF2B2B2B"/>
-            <Setter
-                Property="TextBlock.TextAlignment"
-                Value="Center"/>
-            <Setter
-                Property="TextBlock.FontSize"
-                Value="18"/>
-            <Setter 
-                Property="TextBlock.FontWeight"
-                Value="DemiBold"/>
-            <Setter 
-                Property="TextBlock.FontFamily"
-                Value="Bahnschrift SemiBold"/>
-        </Style>
-        <!--#endregion-->
-
-        <!--#region Стиль для StackPanel в добавлении и редактировании -->
-        <Style x:Key="StyleStackPanelInEditProduct"
-               TargetType="StackPanel">
-            <Setter
-                Property="HorizontalAlignment"
-                Value="Center"/>
-            <Setter
-                Property="VerticalAlignment"
-                Value="Top"/>
-            <Setter
-                Property="Margin"
-                Value="0 10 0 0"/>
-            <Setter
-                Property="TextBlock.Foreground"
-                Value="#FF2B2B2B"/>
-            <Setter
-                Property="TextBlock.TextAlignment"
-                Value="Center"/>
-            <Setter
-                Property="TextBlock.FontSize"
-                Value="18"/>
-            <Setter 
-                Property="TextBlock.FontWeight"
-                Value="DemiBold"/>
-            <Setter 
-                Property="TextBlock.FontFamily"
-                Value="Bahnschrift SemiBold"/>
-        </Style>
-        <!--#endregion-->
-
-        <!--#region Стиль для TextBox в добавлении и редактировании-->
-        <Style x:Key="StyleTextBox"
-               TargetType="TextBox">
-            <Setter Property="Background"
-                    Value="Transparent"/>
-            <Setter Property="Padding"
-                    Value="3"/>
-            <Setter Property="BorderBrush"
-                    Value="Black"/>
-            <Setter Property="BorderThickness"
-                    Value="1"/>
-        </Style>
-        <!--#endregion-->
-
-        <!--#region Стиль для фильтрации, сортировки и поиска в списке продуктов -->
-        <Style x:Key="StyleStackPanelProductSortFilterSeacher"
-               TargetType="StackPanel">
-            <Setter
-                Property="TextBlock.Foreground"
-                Value="#FF2B2B2B"/>
-            <Setter
-                Property="TextBlock.TextAlignment"
-                Value="Center"/>
-            <Setter
-                Property="TextBlock.FontSize"
-                Value="14"/>
-            <Setter 
-                Property="TextBlock.FontWeight"
-                Value="DemiBold"/>
-            <Setter 
-                Property="TextBlock.FontFamily"
-                Value="Bahnschrift SemiBold"/>
-        </Style>
-        <!--#endregion-->
-
-        <!--#region Стиль для кнопок навигации в основном окне -->
-        <Style x:Key="MenuButton" 
-               TargetType="RadioButton">
-            <Setter
-                Property="Background"
-                Value="Transparent"/>
-            <Setter
-                Property="Height"
-                Value="55" />
-            <Setter
-                Property="HorizontalAlignment"
-                Value="Left" />
-            <Setter
-                Property="Width"
-                Value="auto" />
-            <Setter
-                Property="Foreground"
-                Value="White" />
-            <Setter
-                Property="Margin"
-                Value="10,0,0,10" />
-
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type RadioButton}">
-                        <Grid>
-                            <Border Name="MenuBorder"
-                                    SnapsToDevicePixels="True"
-                                    BorderBrush="Black"
-                                    Background="{TemplateBinding Background}"
-                                    BorderThickness="2,0,0,0" 
-                                    CornerRadius="0 12 12 0">
-                                <ContentPresenter
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"/>
-                            </Border>
-                        </Grid>
-                        <ControlTemplate.Triggers>
-                            <Trigger
-                                Property="RadioButton.IsChecked"
-                                Value="True">
-                                <Setter
-                                    Property="Background"
-                                    Value="Transparent"/>
-                                <Setter
-                                    TargetName="MenuBorder"
-                                    Property="BorderBrush"
-                                    Value="#FFED6A2B" />
-                            </Trigger>
-                            <Trigger
-                                Property="RadioButton.IsMouseOver"
-                                Value="True">
-                                <Setter
-                                    Property="Background"
-                                    Value="Transparent"/>
-                                <Setter
-                                    TargetName="MenuBorder"
-                                    Property="BorderBrush"
-                                    Value="#1ACC13" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <!--#endregion-->
-        
-        <!--#region Стиль для ListBox продуктов-->
-        <Style x:Key="ListBoxProducts" TargetType="ListBoxItem">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="ListBoxItem">
-                        <Border BorderBrush="{TemplateBinding BorderBrush}"
-                                Background="{TemplateBinding Background}">
-                            <ContentPresenter/>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger
-                                Property="IsMouseOver"
-                                Value="True">
-                                <Setter
-                                    Property="Background"
-                                    Value="#e5e5e5"/>
-                                <Setter
-                                    Property="BorderBrush"
-                                    Value="#e5e5e5" />
-                            </Trigger>
-                            <Trigger
-                                Property="IsSelected"
-                                Value="True">
-                                <Setter
-                                    Property="Background"
-                                    Value="#8d99ae"/>
-                                <Setter
-                                    Property="BorderBrush"
-                                    Value="#edf2f4" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <!--#endregion-->
-
-        <!--#region Стили Stackpanel в личном кабинете-->
-        <Style TargetType="StackPanel" x:Key="PersenCabinetStackpanel">
-            <Setter
-                Property="TextBox.Foreground"
-                Value="#FF2B2B2B"/>
-            <Setter
-                Property="TextBox.FontSize"
-                Value="15"/>
-            <Setter
-                Property="TextBlock.FontSize"
-                Value="18"/>
-            <Setter 
-                Property="TextBox.FontWeight"
-                Value="DemiBold"/>
-            <Setter 
-                Property="TextBox.FontFamily"
-                Value="Bahnschrift SemiBold"/>
-            <Setter 
-                Property="TextBox.Margin"
-                Value="0 0 0 15"/>
-        </Style>
-        <!--#endregion-->
-        
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/Style/StyleToEditAddProduct.xaml"/>
+                <ResourceDictionary Source="/Resources/Style/StyleToLoginRegist.xaml"/>
+                <ResourceDictionary Source="/Resources/Style/StyleToMainWindow.xaml"/>
+                <ResourceDictionary Source="/Resources/Style/StyleToPersonalCabinet.xaml"/>
+                <ResourceDictionary Source="/Resources/Style/StyleToProductList.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
