--- a/Session12/Pages/ProductsListPage.xaml
+++ b/Session12/Pages/ProductsListPage.xaml
@@ -63,7 +63,7 @@
                 </ComboBox>
             </StackPanel>
             <StackPanel
-                 Margin="0 0 15 0"
+                Margin="0 0 15 0"
                 Orientation="Vertical">
                 <TextBlock
                     Text="Название или описание"
@@ -80,16 +80,23 @@
                     Width="150"
                     Margin="0 0 0 5"
                     TextWrapping="Wrap"/>
+                
                 <ComboBox
                     x:Name="NumberProductInList"
                     VerticalAlignment="Bottom"
                     SelectionChanged="ComboBox_SelectionChanged"
                     SelectedIndex="0">
-                    <ComboBoxItem Content="2" Tag="2"/>
-                    <ComboBoxItem Content="3" Tag="3"/>
-                    <ComboBoxItem Content="10" Tag="10"/>
-                    <ComboBoxItem Content="50" Tag="50"/>
-                    <ComboBoxItem Content="200" Tag="200"/>
+                    
+                    <ComboBoxItem Content="2"
+                                  Tag="2"/>
+                    <ComboBoxItem Content="3"
+                                  Tag="3"/>
+                    <ComboBoxItem Content="10"
+                                  Tag="10"/>
+                    <ComboBoxItem Content="50"
+                                  Tag="50"/>
+                    <ComboBoxItem Content="200"
+                                  Tag="200"/>
                 </ComboBox>
             </StackPanel>
         </StackPanel>
@@ -106,7 +113,8 @@
                         <Border
                             BorderBrush="Black"
                             BorderThickness=" 0 0 0 2"
-                            Padding="10">
+                            Padding="10"
+                            CornerRadius="3">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
@@ -126,7 +134,7 @@
                                     Height="100"
                                     Margin="0 0 10 0"
                                     Grid.Column="0"
-                                    Grid.RowSpan="3"
+                                    Grid.RowSpan="2"
                                     BorderBrush="Black"
                                     BorderThickness="2"
                                     VerticalAlignment="Center">
@@ -152,7 +160,9 @@
 
                                 <TextBlock
                                     Grid.Column="2"
-                                    Grid.Row="0">
+                                    Grid.Row="0"
+                                    TextWrapping="Wrap"
+                                    MaxWidth="200">
                                     <TextBlock.Text>
                                         <MultiBinding
                                             StringFormat="{}Название:  {0} {1} {2}">
@@ -167,10 +177,14 @@
                                 </TextBlock>
 
                                 <TextBlock
-                                    Text="{Binding Path=Description, StringFormat='{}Описание продукта: {0}'}"
+                                    Text="{Binding Path=Description,
+                                                   StringFormat='{}Описание продукта: {0}'}"
                                     TextWrapping="Wrap"
                                     Grid.Column="1"
-                                    Grid.Row="1"/>
+                                    Grid.Row="1"
+                                    Grid.ColumnSpan="2"
+                                    HorizontalAlignment="Left"
+                                    MaxWidth="300"/>
 
                                 <TextBlock
                                     Text="{Binding Path=AdditionDateTime}"
@@ -178,12 +192,14 @@
                                     Grid.Column="1"/>
 
                                 <TextBlock
-                                    Text="{Binding Path=Cost, StringFormat={}Стоимость: {0:f} рубл.}"
+                                    Text="{Binding Path=Cost,
+                                                   StringFormat={}Стоимость: {0:f} рубл.}"
                                     Grid.Row="2"
                                     Grid.Column="2"
                                     Margin="0 0 10 0"/>
 
                                 <ListBox
+                                    Margin="0 10 0 0"
                                     Grid.Column="1"
                                     Grid.ColumnSpan="2"
                                     Grid.Row="3"
@@ -204,6 +220,15 @@
                                         </DataTemplate>
                                     </ListBox.ItemTemplate>
                                 </ListBox>
+
+                                <TextBlock
+                                    Text="{Binding Path=Quantity,
+                                                   StringFormat={}Количество: {0}}"
+                                    Grid.Row="3"
+                                    Grid.Column="0"
+                                    TextWrapping="Wrap"
+                                    Margin="0 0 10 0"
+                                    MaxWidth="120"/>
                             </Grid>
                         </Border>
                     </DataTemplate>
