--- a/Session12/Windows/AddAndEditProduct.xaml
+++ b/Session12/Windows/AddAndEditProduct.xaml
@@ -25,7 +25,7 @@
             </Grid.RowDefinitions>
 
             <Border BorderBrush="Black"
-                BorderThickness=" 0 0 2 2 " Grid.ColumnSpan="2" Margin="0,0,593,0">
+                BorderThickness=" 0 0 2 2 ">
                 <StackPanel VerticalAlignment="Center">
                     <Border BorderBrush="Black"
                         BorderThickness="1"
@@ -55,67 +55,90 @@
                 </StackPanel>
             </Border>
 
-            <StackPanel Style="{StaticResource ResourceKey=StyleStackPanel}"
-                    Grid.Column="1" Height="248" Width="110">
+            <Border BorderBrush="Black"
+                    BorderThickness=" 0 0 0 2 "
+                    Grid.Column="1"
+                    Padding="0 10">
+                <ScrollViewer>
+                    <StackPanel Style="{StaticResource ResourceKey=StyleStackPanel}"
+                                HorizontalAlignment="Left"
+                                Margin="30 0 0 0">
 
-                <StackPanel Orientation="Horizontal"
-                            Margin="0 0 0 20"
-                            x:Name="IDStackPanel">
-                    <TextBlock Text="Номер"
-                               Margin="0 0 10 0"/>
-                    <TextBox Text="{Binding ProductEditing.ID}"
-                             IsReadOnly="True"
-                             Style="{StaticResource ResourceKey=StyleTextBox}"/>
-                </StackPanel>
+                        <StackPanel Orientation="Horizontal"
+                                    Margin="0 0 0 20"
+                                    x:Name="IDStackPanel">
+                            <TextBlock Text="Номер:"
+                                       Margin="0 0 10 0"/>
+                            <TextBox Text="{Binding ProductEditing.ID}"
+                                     IsReadOnly="True"
+                                     MaxWidth="400"
+                                     Style="{StaticResource ResourceKey=StyleTextBox}"/>
+                        </StackPanel>
 
-                <StackPanel Orientation="Horizontal"
-                            Margin="0 0 0 20">
-                    <TextBlock Text="Дата"
-                               Margin="0 0 10 0"/>
-                    <TextBox Text="{Binding ProductEditing.AdditionDateTime}"
-                             Style="{StaticResource ResourceKey=StyleTextBox}"/>
-                </StackPanel>
+                        <StackPanel Orientation="Horizontal"
+                                    Margin="0 0 0 20">
+                            <TextBlock Text="Дата:"
+                                       Margin="0 0 10 0"/>
+                            <TextBox Text="{Binding ProductEditing.AdditionDateTime}"
+                                     Style="{StaticResource ResourceKey=StyleTextBox}"/>
+                        </StackPanel>
 
-                <StackPanel Orientation="Horizontal"
-                            Margin="0 0 0 20">
-                    <TextBlock Text="Название"
-                               Margin="0 0 10 0"/>
-                    <TextBox Text="{Binding ProductEditing.Title}"
-                             Style="{StaticResource ResourceKey=StyleTextBox}"
-                             TextWrapping="Wrap"
-                             PreviewTextInput="TextBox_PreviewTextInput"/>
-                </StackPanel>
+                        <StackPanel Orientation="Horizontal"
+                                    Margin="0 0 0 20">
+                            <TextBlock Text="Название:"
+                                       Margin="0 0 10 0"/>
+                            <TextBox Text="{Binding ProductEditing.Title}"
+                                     Style="{StaticResource ResourceKey=StyleTextBox}"
+                                     TextWrapping="Wrap"
+                                     MaxWidth="400"
+                                     PreviewTextInput="TextBox_PreviewTextInput"/>
+                        </StackPanel>
 
-                <StackPanel Orientation="Horizontal"
-                            Margin="0 0 0 20">
-                    <TextBlock Text="Описание"
-                               Margin="0 0 10 0"/>
-                    <TextBox Text="{Binding ProductEditing.Description}"
-                             Style="{StaticResource ResourceKey=StyleTextBox}"
-                             TextWrapping="Wrap"
-                             PreviewTextInput="TextBox_PreviewTextInput"/>
-                </StackPanel>
+                        <StackPanel Orientation="Horizontal"
+                                    Margin="0 0 0 20">
+                            <TextBlock Text="Описание:"
+                                       Margin="0 0 10 0"/>
+                            <TextBox Text="{Binding ProductEditing.Description}"
+                                     Style="{StaticResource ResourceKey=StyleTextBox}"
+                                     TextWrapping="Wrap"
+                                     MaxWidth="400"
+                                     PreviewTextInput="TextBox_PreviewTextInput"/>
+                        </StackPanel>
 
-                <StackPanel Orientation="Horizontal"
-                            Margin="0 0 0 20">
-                    <TextBlock Text="Стоимость"
-                               Margin="0 0 10 0"/>
-                    <TextBox Text="{Binding ProductEditing.Cost}"
-                             Style="{StaticResource ResourceKey=StyleTextBox}"
-                             TextWrapping="Wrap"/>
-                </StackPanel>
-            </StackPanel>
+                        <StackPanel Orientation="Horizontal"
+                                    Margin="0 0 0 20">
+                            <TextBlock Text="Стоимость:"
+                                       Margin="0 0 10 0"/>
+                            <TextBox Text="{Binding ProductEditing.Cost}"
+                                     Style="{StaticResource ResourceKey=StyleTextBox}"
+                                     TextWrapping="Wrap"
+                                     MaxWidth="400"/>
+                        </StackPanel>
 
-            <StackPanel
-                        Grid.Column="0" Grid.ColumnSpan="2" Margin="0,314,593,0" Grid.RowSpan="3">
+                        <StackPanel Orientation="Horizontal"
+                                    Margin="0 0 0 20">
+                            <TextBlock Text="Количество:"
+                                       Margin="0 0 10 0"/>
+                            <TextBox Text="{Binding ProductEditing.Quantity}"
+                                     Style="{StaticResource ResourceKey=StyleTextBox}"
+                                     TextWrapping="Wrap"
+                                     MaxWidth="400"/>
+                        </StackPanel>
+                    </StackPanel>
+                </ScrollViewer>
+            </Border>
+
+            <StackPanel Grid.Column="0"
+                        Grid.Row="1"
+                        Margin="0 10 0 0">
 
                 <TextBlock Text="Единицы измерения"
                        Margin="10 5 0 5"/>
 
                 <ListBox ItemsSource="{Binding MeasureUnits}"
-                     x:Name="ListBoxRadioBattonMeasureUnits"
-                     Margin="10 5 10 5"
-                     ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                         x:Name="ListBoxRadioBattonMeasureUnits"
+                         Margin="10 5 10 5"
+                         ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                     <ListBox.ItemsPanel>
                         <ItemsPanelTemplate>
                             <WrapPanel IsItemsHost="True"/>
@@ -131,10 +154,11 @@
                 </ListBox>
             </StackPanel>
 
-            <StackPanel
-                        Grid.Column="1"
+            <StackPanel Grid.Column="1"
                         Orientation="Horizontal"
-                        HorizontalAlignment="Center" Margin="0,314,0,0" Grid.RowSpan="3" Width="428">
+                        HorizontalAlignment="Center"
+                        Grid.Row="1"
+                        Margin="0 10 0 0">
 
                 <StackPanel>
                     <TextBlock Text="Выбранные страны поставщиков"/>
@@ -199,7 +223,8 @@
                     Grid.Row="3"
                     HorizontalAlignment="Right"
                     Padding="5 0 5 0"
-                    Margin="0 5 20 5" Click="SaveChagesInProduct"/>
+                    Margin="0 5 20 5"
+                    Click="SaveChagesInProduct"/>
         </Grid>
     </Border>
 </Window>
