Чуток сделал личный кабинет и с иконками

--- a/Session12/LogAndRegWindow/RegistrationPage.xaml
+++ b/Session12/LogAndRegWindow/RegistrationPage.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d" 
         Height="680"
         Width="300"
+        Icon="/Resources/Image/logo.png"
         Title="RegistrationPage">
     
     <StackPanel Style="{StaticResource ResourceKey=StyleStackPanel}">
