--- a/Session12/LogAndRegWindow/LoginPage.xaml
+++ b/Session12/LogAndRegWindow/LoginPage.xaml
@@ -5,11 +5,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
         xmlns:local="clr-namespace:Session12.Pages"
         mc:Ignorable="d" 
-        Height="340"
-        Width="300"
+        Icon="/Resources/Image/logo.png"
         Title="Авторизация">
 
-    <StackPanel Style="{StaticResource ResourceKey=StyleStackPanel}">
+    <StackPanel Style="{StaticResource ResourceKey=StyleStackPanel}"
+                Margin="30">
         <TextBlock Text="Авторизация" Margin="0 0 0 20" FontSize="25" FontWeight="Bold"/>
 
         <TextBlock x:Name="InfoMessage" Visibility="Collapsed" Foreground="Red" TextWrapping="Wrap"/>
