--- a/Session12/Pages/PersonalCabinetPage.xaml
+++ b/Session12/Pages/PersonalCabinetPage.xaml
@@ -24,20 +24,20 @@
             CornerRadius="10"
             Width="200"
             Height="200"
-            BorderBrush="Black" Margin="33,12,34,13">
-            <Image Source="/Recourse/PersonPhoto.jpg"/>
+            BorderBrush="Black">
+            <Image Source="/Resources/Image/PersonPhoto.jpg"/>
         </Border>
 
         <StackPanel
             Grid.Column="1"
             Grid.RowSpan="2"
             HorizontalAlignment="Center"
-            Style="{StaticResource ResourceKey=PersenCabinetStackpanel}" Margin="0,0,0,15">
+            Style="{StaticResource ResourceKey=PersenCabinetStackpanel}">
             <TextBlock Text="Имя: "
                      Margin="0 0 10 0"/>
             <TextBox x:Name="LastName" 
                      MinWidth="300"
-                     Text="{Binding Path=_user.LastName}"
+                     Text="{Binding Path=MainUser.LastName}"
                      Margin="0 0 0 10"
                      FontSize="15" TextChanged="LastName_TextChanged"/>
 
@@ -45,7 +45,7 @@
                      Margin="0 0 10 0"/>
             <TextBox x:Name="FirstName"
                      MinWidth="300"
-                     Text="{Binding Path=_user.FirstName}"
+                     Text="{Binding Path=MainUser.FirstName}"
                      Margin="0 0 0 10"
                      FontSize="15" TextChanged="FirstName_TextChanged"/>
 
@@ -53,7 +53,7 @@
                      Margin="0 0 10 0"/>
             <TextBox x:Name="Patronymic"
                      MinWidth="300"
-                     Text="{Binding Path=_user.Patronymic}"
+                     Text="{Binding Path=MainUser.Patronymic}"
                      Margin="0 0 0 10"
                      FontSize="15" TextChanged="Patronymic_TextChanged"/>
 
@@ -61,7 +61,7 @@
                      Margin="0 0 10 0"/>
             <TextBox x:Name="PhoneNumber"
                      MinWidth="300"
-                     Text="{Binding Path=_user.PhoneNumber}"
+                     Text="{Binding Path=MainUser.PhoneNumber}"
                      Margin="0 0 0 10"
                      FontSize="15" TextChanged="PhoneNumber_TextChanged"/>
 
@@ -69,7 +69,7 @@
                      Margin="0 0 10 0"/>
             <TextBox x:Name="Email"
                      MinWidth="300"
-                     Text="{Binding Path=_user.Email}"
+                     Text="{Binding Path=MainUser.Email}"
                      Margin="0 0 0 10"
                      FontSize="15" TextChanged="Email_TextChanged"/>
 
@@ -77,7 +77,7 @@
                      Margin="0 0 10 0"/>
             <TextBox x:Name="LoginBox"
                      MinWidth="300"
-                     Text="{Binding Path=_user.Login}"
+                     Text="{Binding Path=MainUser.Login}"
                      Margin="0 0 0 10"
                      FontSize="15" TextChanged="LoginBox_TextChanged"/>
 
@@ -85,10 +85,33 @@
                      Margin="0 0 10 0"/>
             <TextBox x:Name="PasswordBox"
                      MinWidth="300"
-                     Text="{Binding Path=_user.Password}"
+                     Text="{Binding Path=MainUser.Password}"
                      Margin="0 0 0 10"
                      FontSize="15" TextChanged="PasswordBox_TextChanged"/>
 
+        </StackPanel>
+
+        <StackPanel Grid.Row="1"
+                    Margin="0 10 0 0"
+                    HorizontalAlignment="Center"
+                    MinWidth="200"
+                    Style="{StaticResource ResourceKey=PersenCabinetStackpanel}">
+
+            <TextBlock Text="{Binding MainUser.Role.Title,
+                             StringFormat='{}Должность: {0}'}"
+                       Margin="0 0 0 20"/>
+
+            <TextBlock Text="Пол:"/>
+
+            <ComboBox ItemsSource="{Binding Genders}"
+                      SelectedIndex="{Binding MainUser.GenderID}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <ComboBoxItem Content="{Binding Title}"
+                                      Tag="{Binding Title}"/>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
         </StackPanel>
 
         <TextBlock x:Name="MessageInfo"
@@ -103,6 +126,7 @@
             HorizontalAlignment="Right"
             Padding="10 0 10 0"
             Content="Сохранить"
-            Click="EditUserInformation" Grid.RowSpan="2"/>
+            Click="EditUserInformation"
+            Grid.RowSpan="2"/>
     </Grid>
 </Page>
