--- a/Session12/App.xaml
+++ b/Session12/App.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Session12"
-             StartupUri="LogAndRegWindow/LoginPage.xaml">
-             <!--StartupUri="LogAndRegWindow/LoginPage.xaml">-->
+             StartupUri="Windows/LoginPage.xaml">
+             <!--StartupUri="Windows/LoginPage.xaml">-->
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
