--- a/Session12/Resources/Style/StyleToLoginRegist.xaml
+++ b/Session12/Resources/Style/StyleToLoginRegist.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
-    <!--StackPanel-->
+
+    <!--StackPanel, Border-->
     <!--Используется:
                      * Авторизация
                      * Регистрация-->
@@ -29,5 +29,30 @@
         <Setter 
                 Property="TextBlock.FontFamily"
                 Value="Comic Sans MS"/>
+    </Style>
+
+    <Style x:Key="BorderAnimation" TargetType="Border">
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Trigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <ThicknessAnimation Duration="0:0:0.400" From="0" To="2" Storyboard.TargetProperty="BorderThickness" />
+                            <DoubleAnimation Duration="0:0:0.300" From="40" To="45" Storyboard.TargetProperty="Height" />
+                            <DoubleAnimation Duration="0:0:0.300"  From="250" To="260" Storyboard.TargetProperty="Width" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.EnterActions>
+                <Trigger.ExitActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <ThicknessAnimation Duration="0:0:0.250" From="2" To="0" Storyboard.TargetProperty="BorderThickness" />
+                            <DoubleAnimation Duration="0:0:0.150" From="45" To="40" Storyboard.TargetProperty="Height" />
+                            <DoubleAnimation Duration="0:0:0.150" From="260" To="250" Storyboard.TargetProperty="Width" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.ExitActions>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
