--- a/Session12/Windows/RegistrationPage.xaml
+++ b/Session12/Windows/RegistrationPage.xaml
@@ -8,7 +8,7 @@
         Icon="/Resources/Image/logo.png"
         Title="Регистрация"
         Width="700"
-        Height="750">
+        Height="780">
     
     <ScrollViewer Padding="30">
         <StackPanel Style="{StaticResource ResourceKey=StyleStackPanel}">
@@ -36,6 +36,7 @@
                 <StackPanel>
                     <TextBlock Text="Фамилия"/>
                     <TextBox x:Name="LastnameBox"
+                              BorderBrush="Black"
                              BorderThickness="0 0 0 2"
                              TextWrapping="Wrap"
                              Width="200"/>
@@ -46,6 +47,7 @@
                 <StackPanel>
                     <TextBlock Text="Отчество"/>
                     <TextBox x:Name="PhynimicBox"
+                             BorderBrush="Black"
                              BorderThickness="0 0 0 2"
                              TextWrapping="Wrap"
                              Width="200"/>
@@ -59,7 +61,8 @@
                     <TextBlock Margin="0 10 0 0"
                                Text="Телефон (+7)"/>
                     <TextBox x:Name="PhoneBox"
-                             BorderThickness="0 0 0 1"
+                             BorderThickness="0 0 0 2"
+                             BorderBrush="Black"
                              TextWrapping="Wrap"
                              Width="300"
                              MinWidth="200"/>
@@ -71,7 +74,8 @@
                     <TextBlock Margin="0 10 0 0"
                            Text="Адрес электронной почты"/>
                     <TextBox x:Name="EmailBox"
-                         BorderThickness="0 0 0 1"
+                             BorderThickness="0 0 0 2"
+                             BorderBrush="Black"
                              TextWrapping="Wrap"
                              Width="300"
                          MinWidth="200"/>
@@ -85,7 +89,8 @@
         
             <ComboBox SelectedIndex="0"
                       x:Name="GenderBox"
-                      BorderThickness="0 0 0 1"
+                      BorderBrush="Black"
+                      BorderThickness="0 0 0 2"
                       MinWidth="200">
                 <ComboBoxItem Content="Мужской"
                               Tag="1"/>
@@ -97,7 +102,8 @@
         
             <TextBlock Text="Логин"/>
             <TextBox x:Name="LoginBox"
-                     BorderThickness="0 0 0 1"
+                     BorderThickness="0 0 0 2"
+                     BorderBrush="Black"
                      MinWidth="200"
                      MaxWidth="600"/>
         
@@ -106,25 +112,35 @@
             <TextBlock Margin="0 10 0 0"
                        Text="Пароль"/>
             <PasswordBox x:Name="PasswordBox"
-                         BorderThickness="0 0 0 1"
+                         BorderThickness="0 0 0 2"
+                         BorderBrush="Black"
                          MinWidth="200"
                          MaxWidth="600"/>
         
             <Separator/>
-        
-            <Button Margin="0 20 0 0"
-                    x:Name="Enter"
-                    Content="Зарегестриловаться"
-                    Padding="20 4"
-                    Click="ButtonRegistClick"
-                    HorizontalAlignment="Center"/>
-        
-            <Button Margin="0 10 0 0"
-                    x:Name="GoToLoginPage"
-                    Padding="6 4"
-                    Content="Перейти в окно входа"
-                    Click="GoToLoginPagePage_Click"
-                    HorizontalAlignment="Center"/>
+
+            <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Center"
+                        Margin="10 20 0 0">
+                <Border Style="{DynamicResource BorderAnimation}"
+                        Margin="0 0 20 0">
+                    <Button x:Name="Enter"
+                        Content="Зарегестриловаться"
+                        Height="40"
+                        Width="250"
+                        Click="ButtonRegistClick"
+                        HorizontalAlignment="Center"/>
+                </Border>
+
+                <Border Style="{DynamicResource BorderAnimation}">
+                    <Button x:Name="GoToLoginPage"
+                        Height="40"
+                        Width="250"
+                        Content="Перейти в окно входа"
+                        Click="GoToLoginPagePage_Click"
+                        HorizontalAlignment="Center"/>
+                </Border>
+            </StackPanel>
         </StackPanel>
     </ScrollViewer>
 </Window>
