--- a/Session12/Windows/LoginPage.xaml
+++ b/Session12/Windows/LoginPage.xaml
@@ -67,7 +67,7 @@
             <Button x:Name="GoToRegistrationPage"
                     Height="40"
                     Width="250"
-                    Content="Зарегестриловаться"
+                    Content="Зарегистрироваться"
                     Click="GoToRegistrationPage_Click"/>
         </Border>
     </StackPanel>
