--- a/Session12/App.xaml
+++ b/Session12/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Session12"
-             StartupUri="Windows/LoginPage.xaml">
+             StartupUri="MainWindow.xaml">
              <!--StartupUri="Windows/LoginPage.xaml">-->
     <Application.Resources>
         <ResourceDictionary>
@@ -12,6 +12,7 @@
                 <ResourceDictionary Source="/Resources/Style/StyleToMainWindow.xaml"/>
                 <ResourceDictionary Source="/Resources/Style/StyleToPersonalCabinet.xaml"/>
                 <ResourceDictionary Source="/Resources/Style/StyleToProductList.xaml"/>
+                <ResourceDictionary Source="/Resources/Style/StyleToOrderList.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
