--- a/Session12/Windows/RegistrationPage.xaml
+++ b/Session12/Windows/RegistrationPage.xaml
@@ -125,7 +125,7 @@
                 <Border Style="{DynamicResource BorderAnimation}"
                         Margin="0 0 20 0">
                     <Button x:Name="Enter"
-                        Content="Зарегестриловаться"
+                        Content="Зарегистрироваться"
                         Height="40"
                         Width="250"
                         Click="ButtonRegistClick"
